// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssigneeGroup /> should render correctly for a team 1`] = `
<_default
  assignedTo={
    Array [
      Object {
        "id": "id",
        "team": "SomeTeam",
      },
    ]
  }
  id={1}
  threshold={1}
>
  <_default
    effect="solid"
    id="tooltip-1"
    place="bottom"
    value={
      Array [
        "<i>Team</i> ",
      ]
    }
  >
    <styled__Wrapper
      data-for="tooltip-1"
      data-tip={
        Array [
          "<i>Team</i> ",
        ]
      }
      effect="solid"
      id="tooltip-1"
      place="bottom"
      value={
        Array [
          "<i>Team</i> ",
        ]
      }
    >
      <div
        className="styled__Wrapper-funpqb-0 cznzQQ"
        data-for="tooltip-1"
        data-tip={
          Array [
            "<i>Team</i> ",
          ]
        }
        id="tooltip-1"
        value={
          Array [
            "<i>Team</i> ",
          ]
        }
      >
        <styled__AssigneeWrapper>
          <div
            className="styled__AssigneeWrapper-sc-1sogfbk-0 liVcjM"
          >
            <ul>
              <styled__Assignee
                assigneeColor="#801e2c"
                index={0}
                key="T-1-0"
              >
                <li
                  className="styled__Assignee-sc-1sogfbk-1 jhRkyk"
                >
                  <test-file-stub />
                </li>
              </styled__Assignee>
            </ul>
          </div>
        </styled__AssigneeWrapper>
        <styled__TooltipWrapper
          display="true"
        >
          <div
            className="styled__TooltipWrapper-funpqb-1 gQtIVd"
            display="true"
          >
            <ReactTooltip
              clickable={false}
              delayShow={300}
              effect="solid"
              getContent={[Function]}
              html={true}
              id="tooltip-1"
              insecure={true}
              multiline={true}
              place="bottom"
              resizeHide={true}
              type="dark"
              wrapper="div"
            >
              <div
                className="__react_component_tooltip place-bottom type-dark"
                data-id="tooltip"
                id="tooltip-1"
              >
                null
              </div>
            </ReactTooltip>
          </div>
        </styled__TooltipWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</_default>
`;

exports[`<AssigneeGroup /> should render correctly for assignee and team 1`] = `
<_default
  assignedTo={
    Array [
      Object {
        "id": "id",
      },
    ]
  }
  id={1}
  team={
    Array [
      "SomeTeam",
    ]
  }
  threshold={1}
>
  <_default
    effect="solid"
    id="tooltip-1"
    place="bottom"
    value={
      Array [
        " ",
        "<br /><aside></aside><i>Team</i> ",
      ]
    }
  >
    <styled__Wrapper
      data-for="tooltip-1"
      data-tip={
        Array [
          " ",
          "<br /><aside></aside><i>Team</i> ",
        ]
      }
      effect="solid"
      id="tooltip-1"
      place="bottom"
      value={
        Array [
          " ",
          "<br /><aside></aside><i>Team</i> ",
        ]
      }
    >
      <div
        className="styled__Wrapper-funpqb-0 cznzQQ"
        data-for="tooltip-1"
        data-tip={
          Array [
            " ",
            "<br /><aside></aside><i>Team</i> ",
          ]
        }
        id="tooltip-1"
        value={
          Array [
            " ",
            "<br /><aside></aside><i>Team</i> ",
          ]
        }
      >
        <styled__AssigneeWrapper>
          <div
            className="styled__AssigneeWrapper-sc-1sogfbk-0 liVcjM"
          >
            <ul>
              <styled__Assignee
                assigneeColor="#801e2c"
                index={0}
                key="-1-0"
              >
                <li
                  className="styled__Assignee-sc-1sogfbk-1 jhRkyk"
                />
              </styled__Assignee>
            </ul>
            <_default
              count={1}
              plus={true}
            >
              <styled__NumberBadgeWrapper>
                <span
                  className="styled__NumberBadgeWrapper-sc-2rr4cw-0 hgFfEW"
                >
                  +
                  1
                </span>
              </styled__NumberBadgeWrapper>
            </_default>
          </div>
        </styled__AssigneeWrapper>
        <styled__TooltipWrapper
          display="true"
        >
          <div
            className="styled__TooltipWrapper-funpqb-1 gQtIVd"
            display="true"
          >
            <ReactTooltip
              clickable={false}
              delayShow={300}
              effect="solid"
              getContent={[Function]}
              html={true}
              id="tooltip-1"
              insecure={true}
              multiline={true}
              place="bottom"
              resizeHide={true}
              type="dark"
              wrapper="div"
            >
              <div
                className="__react_component_tooltip place-bottom type-dark"
                data-id="tooltip"
                id="tooltip-1"
              >
                null
              </div>
            </ReactTooltip>
          </div>
        </styled__TooltipWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</_default>
`;

exports[`<AssigneeGroup /> should render correctly for many assignees 1`] = `
<_default
  assignedTo={
    Array [
      Object {
        "id": "id",
      },
    ]
  }
  id={1}
  supportUsers={
    Array [
      Object {
        "id": "id2",
      },
    ]
  }
  threshold={1}
>
  <_default
    effect="solid"
    id="tooltip-1"
    place="bottom"
    value={
      Array [
        " ",
        "<br /> ",
      ]
    }
  >
    <styled__Wrapper
      data-for="tooltip-1"
      data-tip={
        Array [
          " ",
          "<br /> ",
        ]
      }
      effect="solid"
      id="tooltip-1"
      place="bottom"
      value={
        Array [
          " ",
          "<br /> ",
        ]
      }
    >
      <div
        className="styled__Wrapper-funpqb-0 cznzQQ"
        data-for="tooltip-1"
        data-tip={
          Array [
            " ",
            "<br /> ",
          ]
        }
        id="tooltip-1"
        value={
          Array [
            " ",
            "<br /> ",
          ]
        }
      >
        <styled__AssigneeWrapper>
          <div
            className="styled__AssigneeWrapper-sc-1sogfbk-0 liVcjM"
          >
            <ul>
              <styled__Assignee
                assigneeColor="#801e2c"
                index={0}
                key="-1-0"
              >
                <li
                  className="styled__Assignee-sc-1sogfbk-1 jhRkyk"
                />
              </styled__Assignee>
            </ul>
            <_default
              count={1}
              plus={true}
            >
              <styled__NumberBadgeWrapper>
                <span
                  className="styled__NumberBadgeWrapper-sc-2rr4cw-0 hgFfEW"
                >
                  +
                  1
                </span>
              </styled__NumberBadgeWrapper>
            </_default>
          </div>
        </styled__AssigneeWrapper>
        <styled__TooltipWrapper
          display="true"
        >
          <div
            className="styled__TooltipWrapper-funpqb-1 gQtIVd"
            display="true"
          >
            <ReactTooltip
              clickable={false}
              delayShow={300}
              effect="solid"
              getContent={[Function]}
              html={true}
              id="tooltip-1"
              insecure={true}
              multiline={true}
              place="bottom"
              resizeHide={true}
              type="dark"
              wrapper="div"
            >
              <div
                className="__react_component_tooltip place-bottom type-dark"
                data-id="tooltip"
                id="tooltip-1"
              >
                null
              </div>
            </ReactTooltip>
          </div>
        </styled__TooltipWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</_default>
`;

exports[`<AssigneeGroup /> should render correctly with all params given 1`] = `
<_default
  assignedTo={
    Array [
      Object {
        "avatar": "avatar",
        "id": "id",
      },
    ]
  }
  id={1}
  offset={1}
  size="sm"
  supportUsers={Array []}
  team={Array []}
  threshold={1}
  tooltip="true"
>
  <_default
    display="true"
    effect="solid"
    id="tooltip-1"
    place="bottom"
    value={
      Array [
        " ",
      ]
    }
  >
    <styled__Wrapper
      data-for="tooltip-1"
      data-tip={
        Array [
          " ",
        ]
      }
      display="true"
      effect="solid"
      id="tooltip-1"
      place="bottom"
      value={
        Array [
          " ",
        ]
      }
    >
      <div
        className="styled__Wrapper-funpqb-0 cznzQQ"
        data-for="tooltip-1"
        data-tip={
          Array [
            " ",
          ]
        }
        display="true"
        id="tooltip-1"
        value={
          Array [
            " ",
          ]
        }
      >
        <styled__AssigneeWrapper>
          <div
            className="styled__AssigneeWrapper-sc-1sogfbk-0 liVcjM"
          >
            <ul>
              <styled__Assignee
                assigneeColor="#801e2c"
                avatar="avatar"
                index={0}
                key="-1-0"
                offset={1}
                size="sm"
              >
                <li
                  className="styled__Assignee-sc-1sogfbk-1 cySUzN"
                  offset={1}
                  size="sm"
                />
              </styled__Assignee>
            </ul>
          </div>
        </styled__AssigneeWrapper>
        <styled__TooltipWrapper
          display="true"
        >
          <div
            className="styled__TooltipWrapper-funpqb-1 gQtIVd"
            display="true"
          >
            <ReactTooltip
              clickable={false}
              delayShow={300}
              effect="solid"
              getContent={[Function]}
              html={true}
              id="tooltip-1"
              insecure={true}
              multiline={true}
              place="bottom"
              resizeHide={true}
              type="dark"
              wrapper="div"
            >
              <div
                className="__react_component_tooltip place-bottom type-dark"
                data-id="tooltip"
                id="tooltip-1"
              >
                null
              </div>
            </ReactTooltip>
          </div>
        </styled__TooltipWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</_default>
`;

exports[`<AssigneeGroup /> should render correctly with only mandatory params given 1`] = `
<_default
  id={1}
  threshold={1}
>
  <_default
    effect="solid"
    id="tooltip-1"
    place="bottom"
    value={Array []}
  >
    <styled__Wrapper
      data-for="tooltip-1"
      data-tip={Array []}
      effect="solid"
      id="tooltip-1"
      place="bottom"
      value={Array []}
    >
      <div
        className="styled__Wrapper-funpqb-0 cznzQQ"
        data-for="tooltip-1"
        data-tip={Array []}
        id="tooltip-1"
        value={Array []}
      >
        No Assignee(s)
        <styled__TooltipWrapper
          display="true"
        >
          <div
            className="styled__TooltipWrapper-funpqb-1 gQtIVd"
            display="true"
          >
            <ReactTooltip
              clickable={false}
              delayShow={300}
              effect="solid"
              getContent={[Function]}
              html={true}
              id="tooltip-1"
              insecure={true}
              multiline={true}
              place="bottom"
              resizeHide={true}
              type="dark"
              wrapper="div"
            >
              <div
                className="__react_component_tooltip place-bottom type-dark"
                data-id="tooltip"
                id="tooltip-1"
              >
                null
              </div>
            </ReactTooltip>
          </div>
        </styled__TooltipWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</_default>
`;
